# cpp_project_template

./: CMakeLists.txt  README.md
.cache/clangd/index/: fft.cpp.1334E88461C59941.idx  fft.h.3664C3E4C4DDFB87.idx  main.cpp.28066FAE20347A67.idx
src/: fft.cpp  fft.h  main  main.cpp
